DTGB-580: Fixed filter toggle button visibility issue.

--- a/source/sass/41-organisms/filter/_filter.scss
+++ b/source/sass/41-organisms/filter/_filter.scss
@@ -14,7 +14,9 @@
 .result__show-filters.modal-trigger {
   display:  none;
 
-  .sidebar-layout.filter & {
-    display: flex;
+  @media (max-width: 769px) {
+    .sidebar-layout.filter & {
+      display: flex;
+    }
   }
 }
